# Graph-Segmentation

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  graph-segmentation.cpp
src/: CMakeLists.txt  disjoint-set.h  pedro.cpp  pedro.h  segment.h
